# hive

./: README.md  hive  setup-agent.sh  setup-manager.sh  setup.sh
ralph2/: AGENTS.md  CLAUDE.md  CODEX.md  prd.json.example  prompt.md  ralph2.sh  ralphsetup
ralph2/skills/ralph/: SKILL.md
repo-transfer/: repo-fetch  repo-receive  repo-send
signal-broker/: listento  signal-broker.service  signal_broker.py  signalme
telegram-bot/: agent_telegram_bot.py  tgsetup
tools/claude-account/: README.md  claude-account  install.sh
tools/codex-account/: README.md  codex-account  install.sh
tools/hive/: README.md  deploy.sh  init.sh  install-worker.sh  worker.sh
tools/ralph2/: AGENTS.md  CLAUDE.md  CODEX.md  README.md  install.sh  prd  prompt.md  ralph2.sh  ralphsetup
tools/ralph2/skills/prd/: SKILL.md
tools/ralph2/skills/ralph/: SKILL.md
tools/ralph2/skills/ralph-tasks/: SKILL.md
tools/repo/: README.md  repo-apply  repo-fetch  repo-registry.sh  repo-send
tools/tdx-vm-sdk/: DESIGN.md  MODULES.md  pyproject.toml
tools/tdx-vm-sdk/examples/: build-measure-deploy.py  nethermind-prover.tdx
tools/tdx-vm-sdk/tdx/: __init__.py  build.py  cli.py  compile.py  fetch.py  helpers.py  image.py  kernel.py  service.py
tools/tdx-vm-sdk/tdx/builders/: __init__.py  c.py  dotnet.py  go.py  rust.py
tools/telegram-bot/: README.md  agent-telegram-bot.service  agent_telegram_bot.py  alertme  promptme  tgsetup
