[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tdx-vm-sdk"
version = "0.1.0"
description = "SDK for building reproducible, measured TDX virtual machine images"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
templates = ["jinja2>=3.1"]

[project.scripts]
tdx = "tdx.cli:main"

[tool.setuptools.packages.find]
include = ["tdx*"]
